--- a/packages/ui-app/package.json
+++ b/packages/ui-app/package.json
@@ -27,12 +27,14 @@
     "@types/react-dropzone": "^4.2.0",
     "@types/react-i18next": "^7.6.1",
     "@types/react-router-dom": "^4.2.7",
+    "file-saver": "^1.3.8",
     "i18next": "^11.1.1",
     "i18next-browser-languagedetector": "^2.2.0",
     "i18next-xhr-backend": "^1.5.1",
     "react": "^16.4.1",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.4.1",
+    "react-file-reader": "^1.1.4",
     "react-i18next": "^7.7.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
