fix: Fix tslint errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
     },
     "typeRoots": [
       "./node_modules/@polkadot/ts",
-      "./node_modules/@types"
+      "./node_modules/@types",
+      "packages/ui-app/src/@types"
     ]
   }
 }
